--- a/purchase_product_barcode/reports/purchase_order_templates.xml
+++ b/purchase_product_barcode/reports/purchase_order_templates.xml
@@ -10,7 +10,8 @@
                    position="after">
             <td>
                 <span t-if="line.barcode">
-                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s' % ('EAN13', line.barcode, 600, 100)"
+                    <img t-att-src="'/report/barcode/?type=%s&amp;value=%s&amp;width=%s&amp;height=%s'
+                                    % ('EAN13', line.barcode, 600, 100)"
                          style="width:300px;height:50px"/>
                 </span>
                 <span t-if="not line.barcode">N/A</span>
